--- a/Lab.Rmd
+++ b/Lab.Rmd
@@ -244,7 +244,7 @@ data_for_prediction = function(table1, size) {
   if (min == max) {
     minMessage = "There is no maximum price and minimum price in our prediction since sources prices are too few to make the prediction."
     g1 = ggplot(table_combined) + geom_line(aes(x = Date, y = Price)) + geom_line(aes(x = Date, y = Price, color = condition)) + theme(panel.grid =element_blank()) + ggtitle("Predicted Result") 
-    maxMessage = ""
+    maxMessage = "There is no maximum price and minimum price in our prediction since sources prices are too few to make the prediction."
   } else {
     minMessage = paste0("The minimum price of our prediction is ", round(min,2), ", which will be in ", minDate, ".")
     maxMessage = paste0("The maximum price of our prediction is ", round(max,2), ", which will be in ", maxDate, ".")
