--- a/final-report/bibliography_report.bib
+++ b/final-report/bibliography_report.bib
@@ -32,6 +32,46 @@
     url = {https://CRAN.R-project.org/package=dplyr}
 }
 
+@Manual{XML:2018,
+    title = {XML: Tools for Parsing and Generating XML Within R and S-Plus},
+    author = {Duncan Temple Lang and the CRAN Team},
+    year = {2018},
+    note = {R package version 3.98-1.16},
+    url = {https://CRAN.R-project.org/package=XML},
+}
+
+@Manual{sqldf:2017,
+    title = {sqldf: Manipulate R Data Frames Using SQL},
+    author = {G. Grothendieck},
+    year = {2017},
+    note = {R package version 0.4-11},
+    url = {https://CRAN.R-project.org/package=sqldf},
+}
+
+@Manual{RSelenium:2018,
+    title = {RSelenium: R Bindings for 'Selenium WebDriver'},
+    author = {John Harrison},
+    year = {2018},
+    note = {R package version 1.7.4},
+    url = {https://CRAN.R-project.org/package=RSelenium},
+}
+
+@Manual{forecast:2018,
+  title = {{forecast}: Forecasting functions for time series and linear models},
+  author = {Rob Hyndman and George Athanasopoulos and Christoph Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo Wang and Farah Yasmeen},
+  year = {2018},
+  note = {R package version 8.4},
+  url = {http://pkg.robjhyndman.com/forecast},
+}
+
+@Manual{shiny:2018,
+    title = {shiny: Web Application Framework for R},
+    author = {Winston Chang and Joe Cheng and JJ Allaire and Yihui Xie and Jonathan McPherson},
+    year = {2018},
+    note = {R package version 1.2.0},
+    url = {https://CRAN.R-project.org/package=shiny},
+}
+
 @article{allaire2015rmarkdown,
   title={rmarkdown: Dynamic Documents for R},
   author={Allaire, JJ and Cheng, Joe and Xie, Yihui and McPherson, Jonathan and Chang, Winston and Allen, Jeff and Wickham, Hadley and Atkins, Aron and Hyndman, Rob},
